opsmx-demo-02/rollouts.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: opsmx-demo
spec:
  replicas: 6
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: opsmx-demo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus_io_path: '/mgmt/prometheus'
        prometheus_io_port: '8088'
      labels:
        app: opsmx-demo
    spec:
      containers:
      - name: opsmx-demo
        image: quay.io/opsmxpublic/canary-issuegen:issue-canary-gen-1421    #Change the image version to trigger a rollout. Versions from 1420 - 1430 are available.
        ports:
          - containerPort: 8088
  strategy:
    canary:
      canaryService: opsmx-demo-canary-svc
      stableService: opsmx-demo-stable-svc
      trafficRouting:
        nginx:
          stableIngress: opsmx-demo-ing
      steps:
      - setWeight: 25
      - pause: { duration: 10s }
      - analysis:
          templates:
            - templateName: opsmx-newrel-tmpl
#            - templateName: load-executor-jmeter-job
          args:
            - name: canary-hash
              valueFrom:
                podTemplateHashValue: Latest
            - name: baseline-hash
              valueFrom:
                podTemplateHashValue: Stable
      - setWeight: 75
      - pause: { duration: 10s }
      - analysis:
          templates:
            - templateName: opsmx-newrel-tmpl
#            - templateName: load-executor-jmeter-job
          args:
            - name: canary-hash
              valueFrom:
                podTemplateHashValue: Latest
            - name: baseline-hash
              valueFrom:
                podTemplateHashValue: Stable
