opsmx-demo-02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opsmx-demo-canary-svc
spec:
  ports:
  - port: 80
    targetPort: 8088
    protocol: TCP
  selector:
    app: opsmx-demo

---
apiVersion: v1
kind: Service
metadata:
  name: opsmx-demo-stable-svc
spec:
  ports:
  - port: 80
    targetPort: 8088
    protocol: TCP
  selector:
    app: opsmx-demo
